refactor: eliminate code smells in classifier hierarchy